--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.jepria</groupId>
     <artifactId>jepria-rest-test</artifactId>
-    <version>1.0.0-SNAPHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
