--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.jepria</groupId>
     <artifactId>jepria-rest-test</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -19,7 +19,7 @@
         <maven.dependency.plugin.version>2.8</maven.dependency.plugin.version>
 
         <jersey.version>2.29</jersey.version>
-        <jepria.version>11.1.0-SNAPSHOT</jepria.version>
+        <jepria.version>12.2.0-SNAPSHOT</jepria.version>
     </properties>
 
     <dependencies>
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.jepria</groupId>
-            <artifactId>jepria</artifactId>
+            <artifactId>jepria-rest</artifactId>
             <version>${jepria.version}</version>
         </dependency>
         <dependency>
