--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jepria</groupId>
+    <groupId>org.jepria.test</groupId>
     <artifactId>jepria-rest-test</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -74,7 +74,7 @@
                                     <type>${project.packaging}</type>
                                     <overWrite>true</overWrite>
                                     <outputDirectory>
-                                        ${env.BIN_HOME}/build/org/jepria/${project.artifactId}/${project.version}
+                                        ${env.BIN_HOME}/build/org/jepria/test/${project.artifactId}/${project.version}
                                     </outputDirectory>
                                 </artifactItem>
                             </artifactItems>
